--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -46,15 +46,15 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-info">Go somewhere</a>
+        <a href="#" class="btn btn-info">Go some!</a>
       </div>
     </div>
     <div class="card" id="cards" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1556565681-67b9cd907d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="...">
+      <img src="/assets/pf1.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-info">Go somewhere</a>
+        <h5 class="card-title">AWASOUNDS</h5>
+        <p class="card-text">バンドメンバー募集サイト【OURSOUNDS】を参考にして作成しました。</p>
+        <a href="#" class="btn btn-info">Go some!</a>
       </div>
     </div>
     <div class="card" id="cards" style="width: 18rem;">
