--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -42,10 +42,10 @@
   </div>
   <div class="card-deck-wrapper">
     <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1570696516177-cacbe20678e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="...">
+      <img src="/assets/pf2.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">メルカリ（コピーサイト）</h5>
+        <p class="card-text">プログラミングスクールでの最終課題でフリーマーケットアプリである「メルカリ」のコピーサイトをチーム開発で作りました。</p>
         <a href="#" class="btn btn-info">Go some!</a>
       </div>
     </div>
