--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Syooooring</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -34,10 +34,10 @@
 </nav>
 <div class="container">
   <div class="jumbotron" id="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <h1 class="display-4">Portfolio</h1>
+    <p class="lead">今まで開発したポートフォリオを載せています</p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p>Profileはこちら</p>
     <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
   </div>
   <div class="card-deck-wrapper">
@@ -46,23 +46,23 @@
       <div class="card-body">
         <h5 class="card-title">メルカリ（コピーサイト）</h5>
         <p class="card-text">プログラミングスクールでの最終課題でフリーマーケットアプリである「メルカリ」のコピーサイトをチーム開発で作りました。</p>
-        <a href="#" class="btn btn-info">Go some!</a>
+        <a href="http://3.113.89.240/" class="btn btn-info">Go some!</a>
       </div>
     </div>
     <div class="card" id="cards" style="width: 18rem;">
       <img src="/assets/pf1.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">AWASOUNDS</h5>
-        <p class="card-text">バンドメンバー募集サイト【OURSOUNDS】を参考にして作成しました。</p>
-        <a href="#" class="btn btn-info">Go some!</a>
+        <p class="card-text">バンドメンバー募集サイト【OURSOUNDS】を参考にして開発しました。</p>
+        <a href="http://18.177.162.67/" class="btn btn-info">Go some!</a>
       </div>
     </div>
     <div class="card" id="cards" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1573703748442-3ba6f4203172?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="...">
+      <img src="/assets/pf3.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-info">Go somewhere</a>
+        <h5 class="card-title">Q&Aサイト</h5>
+        <p class="card-text">UdemyのRuby on Railsの教材で開発しました。</p>
+        <a href="#" class="btn btn-info">Go some!</a>
       </div>
     </div>
   </div>
