--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Syooooring</a>
+    <a class="navbar-brand" href="/posts/index">Syooooring</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,7 +38,7 @@
     <p class="lead">今まで開発したポートフォリオを載せています</p>
     <hr class="my-4">
     <p>Profileはこちら</p>
-    <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-info btn-lg" href="/posts/profile" role="button">Learn more</a>
   </div>
   <div class="card-deck-wrapper">
     <div class="card" style="width: 18rem;">
