--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -1,37 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Syooooring</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-</nav>
 <div class="contents">
   <div class="content">
     Profile
@@ -77,6 +43,32 @@
     <p>アニメ</p>
     <p>車</p>
     <p>バイク</p>
-
+  </div>
+  <div class="works">
+    <h3>会社での役割</h3>
+    <br>
+    <p>前職では、食肉を扱う工場で１０年間働いていました。</p>
+    <p>在庫管理、発注などを担当。</p>
+    <p>その他にも、約１０名の新人教育を担当しました。</p>
+    <p>前職では、多くの新人が２週間足らずで辞めていくという大きな課題があり、</p>
+    <p>私は長期的に成長する為に何をすべきか考えました。工夫した事は３点あります。</p>
+    <p>１点目は、自分が新人だった時の事を思い出して相手の立場、状況に立ち、相手の意見聞く事を大切にしました。</p>
+    <p>２点目としては、継続が大事だと考え上司との相談の上、新人と積極的にコミュニケーションを取り、緊張感を和らげて指導。</p>
+    <p>３点目としては、最初の出来ない段階でも怒るのではなく、信頼して一通り仕事を任せる事を徹底しました。</p>
+    <p>その結果、私の担当した新人は最低でも１年間継続して働いてくれました。中には１０年間勤務してくれた人も居ました。</p>
+    <p>自身の強みを生かし、今後は皆から頼られるようなエンジニアになれればと思っています。</p>
+    <br>
+    <br>
+    <br>
+    <h3>プログラミングに対する関心</h3>
+    <br>
+    <p>コミュニティサイトを自分で作ってみたいと思ったのが私のエンジニアを目指すきっかけでした。</p>
+    <p>趣味に関するコミュニティサイトを利用している際、私は１つのジャンルに特化したサイトがあればと思っていました。</p>
+    <p>他にも「こんな機能があれば」と考え自分で作られないかとインターネットなどで調べたところ、</p>
+    <p>オンラインで勉強できるProgateを知り、少し触ってみたところ自分自身が書いたコードでシステムが動くのを体感し、</p>
+    <p>ますます興味を持つようになりました。そこで本格的に転職を考え、</p>
+    <p>TECH::EXPERT（アウトプット重視の600時間のカリキュラム）への通学を決意しました。</p>
+    <p>TECH::EXPERTでプログラミングを勉強する中で、構造、仕組みの理解をはじめ、</p>
+    <p>実際に思い描いたものが形になる事の素晴らしさ、チームメンバーと共有したりエラー解決を行う大切さを学びました。</p>
   </div>
 </div>
