--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -75,4 +75,15 @@ body{
     background: -webkit-linear-gradient(top, #FFC778, rgba(255, 0, 0, 0.1));
     background: linear-gradient(to bottom, #FFC778, rgba(255, 0, 0, 0.1));
   }
+  .form{
+    width: 100%;
+    height: 500px;
+    padding: 80px 0;
+    text-align: center;
+    input{
+      width: 500px;
+      height: 50px;
+      font-size: 20px;
+    }
+  }
 }
