--- a/app/views/posts/contact.html.erb
+++ b/app/views/posts/contact.html.erb
@@ -12,5 +12,13 @@
     <br>
     <p>担当者のお名前</p>
     <input type="text" placeholder="お名前">
+    <br>
+    <br>
+    <p>Eメールアドレス</p>
+    <input type="email" placeholder="Email">
+    <br>
+    <br>
+    <p> 本文</p>
+    <input type="text" placeholder="本文">
   </div>
 </div>
