--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/posts/profile">Profile</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown" href="/posts/contact" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown" href="/posts/new" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Contact
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
