--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,23 +2,25 @@
   <div class="contact">
   Contact
   </div>
-  <div class="form">
-    <h3>お問い合わせ</h3>
-    <br>
-    <br>
-    <p>会社名</p>
-    <input type="text" placeholder="会社名">
-    <br>
-    <br>
-    <p>担当者のお名前</p>
-    <input type="text" placeholder="お名前">
-    <br>
-    <br>
-    <p>Eメールアドレス</p>
-    <input type="email" placeholder="Email">
-    <br>
-    <br>
-    <p> 本文</p>
-    <input type="text" placeholder="本文">
-  </div>
+  <%= form_with model: @post, class: :form, local: true do |form| %>
+    <div class="form">
+      <h3>お問い合わせ</h3>
+      <br>
+      <br>
+      <p>会社名</p>
+      <%=form.text_field :company_name, placeholder: :会社名, class: "forms"%>
+      <br>
+      <br>
+      <%# <p>担当者のお名前</p>
+      <input type="text" placeholder="お名前">
+      <br>
+      <br>
+      <p>Eメールアドレス</p>
+      <input type="email" placeholder="Email">
+      <br>
+      <br>
+      <p> 本文</p>
+      <input type="text" placeholder="本文">
+    </div> %>
+  <% end %>
 </div>
