--- a/app/views/posts/contact.html.erb
+++ b/app/views/posts/contact.html.erb
@@ -20,5 +20,9 @@
     <br>
     <p> 本文</p>
     <input type="text" placeholder="本文">
+    <br>
+    <br>
+    <br>
+    <input id="button_m" type="submit" value="送信する">
   </div>
 </div>
